bugfix, download feature.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div class="button-container">
       <button id="validate">Validate</button>
       <button id="reset" >Reset</button>
+      <button id="download" >Download result</button>
     </div>
 
     <div>
