--- a/index.html
+++ b/index.html
@@ -24,47 +24,53 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <h1>
-    celos x json language file compare
-  </h1>
+<!-- Add your site or application content here -->
+<h1>
+  celos x json language file compare
+</h1>
 
-  <div class="mid-container">
-    <div class="button-container">
-      <button id="validate" class="button-15">Validate</button>
-      <button id="reset" class="button-15">Reset</button>
-      <button id="download" class="button-15">Download result</button>
-    </div>
+<div class="mid-container">
 
-    <div>
-      <form action="" id="small-form">
-        <h2 id="error"></h2>
-        <h2 id="valid"></h2>
-        <label for="selectFile">Main Json File: </label>
-        <input type="file" id="selectFile" value="Import" accept="application/JSON"/><br />
-        <textarea id="result1" readonly></textarea><br />
-        <label for="selectSecondFile">File to compare: </label>
-        <input type="file" id="selectSecondFile" value="Import" accept="application/JSON"/><br />
-        <textarea id="result2" readonly></textarea>
-        <h1>All the values that are longer than the original.</h1>
-        <textarea id="result3" readonly></textarea>
-      </form>
-    </div>
-
-
-
+  <div class="button-container">
+    <button id="validate" class="button-15">Validate</button>
+    <button id="reset" class="button-15">Reset</button>
+    <button id="download" class="button-15">Download result</button>
   </div>
 
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js" type="text/javascript"></script>
+  <div>
+    <form action="" id="small-form">
+      <h2 id="error"></h2>
+      <h2 id="valid"></h2>
+      <label for="selectFile">Main Json File (You can choose multiple files): </label>
+      <input type="file" id="selectFile" value="Import" accept="application/JSON" multiple/><br/>
+      <textarea id="result1" readonly></textarea><br/>
+      <label for="selectSecondFile">File to compare: </label>
+      <input type="file" id="selectSecondFile" value="Import" accept="application/JSON"/><br/>
+      <textarea id="result2" readonly></textarea>
+      <h1>All the values that are longer than the original.</h1>
+      <textarea id="result3" readonly></textarea>
+    </form>
+  </div>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+</div>
+
+<script src="js/vendor/modernizr-3.11.2.min.js"></script>
+<script src="js/plugins.js"></script>
+<script src="js/main.js" type="text/javascript"></script>
+
+<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+<script>
+  window.ga = function () {
+    ga.q.push(arguments)
+  };
+  ga.q = [];
+  ga.l = +new Date;
+  ga('create', 'UA-XXXXX-Y', 'auto');
+  ga('set', 'anonymizeIp', true);
+  ga('set', 'transport', 'beacon');
+  ga('send', 'pageview')
+</script>
+<script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
